daemoneye-eventbus/tests/snapshots/pattern_truth_table__topic_pattern_matrix_v1.snap
---
source: daemoneye-eventbus/tests/pattern_truth_table.rs
expression: cases
---
- pattern: events.process.+
  topic: events.process.new
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: events.process.+
  topic: events.process
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: "events.#"
  topic: events.process.new
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: "events.#"
  topic: control.collector.status
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: control.trigger.+
  topic: control.trigger.request
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: control.trigger.+
  topic: control.trigger
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: events.process.new
  topic: events.process.new
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: events.process.new
  topic: events.process.old
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: events.+.new
  topic: events.process.new
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: "events.#.process"
  topic: events.process.new
  matches: ~
  pattern_error: "Invalid topic format: Multi-level wildcard (#) must be at the end"
  topic_error: ~
- pattern: events.process.+
  topic: system.health.status
  matches: ~
  pattern_error: ~
  topic_error: "Reserved topic prefix: system"
- pattern: events.+.+
  topic: events.process.new
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: events.+.+
  topic: events.process.lifecycle
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: events.+.+
  topic: events.process.lifecycle.new
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: "events.+.#"
  topic: events.process.lifecycle.new
  matches: true
  pattern_error: ~
  topic_error: ~
- pattern: "events.#"
  topic: events
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: "events.process.new.#"
  topic: events.process.new
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: events.*.new
  topic: events.process.new
  matches: false
  pattern_error: ~
  topic_error: ~
- pattern: events.process.+
  topic: events.Process.new
  matches: ~
  pattern_error: ~
  topic_error: "Invalid character in topic: P"
